Quick fix for products#index overflow
Next up, this page is a prime candidate for being made responsive
(because it is relatively simple).

--- a/app/assets/stylesheets/_products.sass
+++ b/app/assets/stylesheets/_products.sass
@@ -25,7 +25,7 @@ dt img
     border-bottom: 1px solid silver
     float: left
     margin: 0px 32px 10px 10px
-    width: 540px
+    width: 510px
   .icon
     float: left
     height: 128px
